# spatium-wasm

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  requirements.txt
docs/: bundle.js  index.html  spatium.wasm  spatium_wasm.wasm
docs/2018-04-01/: bundle.js
docs/2018-04-04/: bundle.js
html/: index.html
lib/: Cargo.toml
lib/src/: action.rs  game.rs  lib.rs  rng.rs  spatium.rs
lib/src/game/: game1.rs  mod.rs
lib/src/network/: mod.rs  neural_net.rs  qtable.rs  single_layer.rs
network/: Cargo.toml
network/examples/: mlp.rs
network/src/: autonet.rs  lib.rs  ndnetwork.rs  network.rs
scripts/: build-watch.sh
site/: Makefile  package.json  webpack.config.js
site/src/: custom.scss  index.js  qnetworkparameters.js  renderer.js  sim.js  spatium.js  spatium.worker.js  style.css  welcome.js
src/: exports.rs  externs.rs  lib.rs  spatium_js_sys.rs
tensorflow-benchmark/: tensorflow-benchmark.py
