[workspace]

[package]
name = "spatium-wasm"
version = "0.1.0"
authors = ["Shane Gibbs <shane@hands.net.nz>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
spatium-lib = { path = "lib" }
lazy_static = "1.0.0"
rand = "*"
pcg_rand = "0.7.1"
serde_json = "*"

[patch.crates-io]
rand = { git = "https://github.com/shanegibbs/rand.git", branch = "wasm" }
