[package]
name = "spatium-lib"
version = "0.1.0"
authors = ["Shane Gibbs <shane@hands.net.nz>"]

[dependencies]
ndarray = "0.10.0"
ndarray-rand = "0.6.1"
rand = "*"
# autograd = { path = "../../rust-autograd" }
# autograd = { git = "https://github.com/raskr/rust-autograd", features = ["blas"] }
autograd = { git = "https://github.com/raskr/rust-autograd" }
serde = "*"
serde_json = "*"
serde_derive = "*"

[dev-dependencies]
rayon = "1.0"
